Unify CORS: remove WebConfig, use exact allowedOrigins in SecurityConfig